--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,6 +7,7 @@
 <h2><a href="/me">Maine</a></h2>
 <h2><a href="/ma">Massachusetts</a></h2>
 <h2><a href="/nh">New Hampshire</a></h2>
+<h2><a href="/ny">New York</a></h2>
 <h2><a href="/ri">Rhode Island</a></h2>
 <h2><a href="/vt">Vermont</a></h2>
 </center>
